<resources>
    <string name="app_name">POC-Clean-Architec</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_me">Click Me</string>

    <string name="hint_username">Username</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_register">Register</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_username">Username must contain at least 6 characters.</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="error_email">It should be valid email address</string>
    <string name="new_to_app">New to App? Register here</string>
    <string name="all_ready_registered">Already Registered? Login here</string>
    <string name="temp_user_name">arunkumarv</string>
    <string name="login_email">eve.holt@reqres.in</string>
    <string name="login_password">cityslicka</string>


    <string name="register_email">eve.holt@reqres.in</string>
    <string name="register_password">pistol</string>
    <string name="login_successfully">You Have Successfully Logged in</string>
    <string name="register_successfully">You Have Successfully register in</string>
    <string name="insert">Insert</string>
    <string name="get_user_by_id">Get User By ID</string>
    <string name="get_all_user">Get All User</string>
    <string name="delete_user_by_id">Delete User By ID</string>
    <string name="delete_all_user">Delete All User</string>
    <string name="table_listen">Table Listen</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="arun">arun</string>
    <string name="kumar">kumar</string>
    <string name="select_all">Select All</string>
    <string name="enter_user_id">Enter user id</string>
    <string name="empty_data">Data should not be empty</string>
    <string name="try_again">Try again later</string>
    <string name="invalid_credential">Invalid credential</string>
</resources>