<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/loginPageBackgroundColor">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAppIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/app_logo"/>

    <AutoCompleteTextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppIcon"
            android:hint="@string/app_name"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/hint_username">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="@string/login_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/il_username_login"
            android:hint="@string/hint_password"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@string/login_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input"
            android:text="@string/button_next"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input"
            app:layout_constraintRight_toLeftOf="@+id/next_button"
            android:text="@string/button_cancel"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_new_to_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/new_to_app"
            android:hint="@string/new_to_app"
            android:textColor="@color/colorPrimary"/>

    <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
